powerby button code comented and .env.example updated

--- a/.env.example
+++ b/.env.example
@@ -37,11 +37,11 @@ PRISMA_GENERATE_DATAPROXY=
 # - SHARED **************************************************************************************************
 # Set this to http://app.cal.local:3000 if you want to enable organizations, and
 # check variable ORGANIZATIONS_ENABLED at the bottom of this file
-NEXT_PUBLIC_WEBAPP_URL='http://localhost:3000'
+NEXT_PUBLIC_WEBAPP_URL='https://calendar.orionsoftware.ai/'
 # Change to 'http://localhost:3001' if running the website simultaneously
 NEXT_PUBLIC_WEBSITE_URL='http://localhost:3000'
 NEXT_PUBLIC_CONSOLE_URL='http://localhost:3004'
-NEXT_PUBLIC_EMBED_LIB_URL='http://localhost:3000/embed/embed.js'
+NEXT_PUBLIC_EMBED_LIB_URL='https://calendar.orionsoftware.ai/embed/embed.js'
 
 # To enable SAML login, set both these variables
 # @see https://github.com/calcom/cal.com/tree/main/packages/features/ee#setting-up-saml-login
@@ -68,10 +68,10 @@ RESERVED_SUBDOMAINS='"app","auth","docs","design","console","go","status","api",
 # @see: https://github.com/calendso/calendso/issues/263
 # @see: https://next-auth.js.org/configuration/options#nextauth_url
 # Required for Vercel hosting - set NEXTAUTH_URL to equal your NEXT_PUBLIC_WEBAPP_URL
-NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_URL='https://calendar.orionsoftware.ai/'
 # @see: https://next-auth.js.org/configuration/options#nextauth_secret
 # You can use: `openssl rand -base64 32` to generate one
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET="PebLv62sNSfX7tgEMIfLf1aRcsxxXWrJfgW9TEUXbOk="
 # Used for cross-domain cookie authentication
 NEXTAUTH_COOKIE_DOMAIN=
 
@@ -88,7 +88,7 @@ CRON_ENABLE_APP_SYNC=false
 # Application Key for symmetric encryption and decryption
 # must be 32 bytes for AES256 encryption algorithm
 # You can use: `openssl rand -base64 24` to generate one
-CALENDSO_ENCRYPTION_KEY=
+CALENDSO_ENCRYPTION_KEY="njLr19TBR6OfvRbVuLWC2ooLT2w6Gawx"
 
 # Intercom Config
 NEXT_PUBLIC_INTERCOM_APP_ID=
@@ -126,7 +126,7 @@ TWILIO_WHATSAPP_PHONE_NUMBER=
 NEXT_PUBLIC_SENDER_ID=
 TWILIO_VERIFY_SID=
 
-# Set it to "1" if you need to run E2E tests locally. 
+# Set it to "1" if you need to run E2E tests locally.
 NEXT_PUBLIC_IS_E2E=
 
 # Used for internal billing system
